ansible/roles/nat/templates/iptables.nat.rules
# Generated by iptables-save v1.4.21 on Sat Oct  8 09:26:04 2016
*nat
:PREROUTING ACCEPT [528850:34588855]
:INPUT ACCEPT [526914:34441811]
:OUTPUT ACCEPT [22667:1515291]
:POSTROUTING ACCEPT [22023:1469963]

# Forward SSH connections
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2202 -j DNAT --to-destination 192.168.154.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2203 -j DNAT --to-destination 192.168.154.3:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2204 -j DNAT --to-destination 192.168.154.4:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2205 -j DNAT --to-destination 192.168.154.5:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2206 -j DNAT --to-destination 192.168.154.6:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2207 -j DNAT --to-destination 192.168.154.7:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2208 -j DNAT --to-destination 192.168.154.8:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2209 -j DNAT --to-destination 192.168.154.9:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2210 -j DNAT --to-destination 192.168.154.10:22

# Forward HTTP/S requests to load balancers
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.154.2:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8081 -j DNAT --to-destination 192.168.154.2:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8082 -j DNAT --to-destination 192.168.154.3:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8083 -j DNAT --to-destination 192.168.154.3:443

# Forward HTTP/S requests to preprod server
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8084 -j DNAT --to-destination 192.168.154.10:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8085 -j DNAT --to-destination 192.168.154.10:443

# Forward HTTP/S requests to Zabbix web interface
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8086 -j DNAT --to-destination 192.168.154.9:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8087 -j DNAT --to-destination 192.168.154.9:443

# Forward HTTP/S requests to Gogs web interface
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8088 -j DNAT --to-destination 192.168.154.8:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8089 -j DNAT --to-destination 192.168.154.8:443

-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Oct  8 09:26:04 2016
