ansible/roles/nat/templates/iptables.rules
# Generated by iptables-save v1.4.21 on Tue Jun 28 15:01:31 2016
*nat
:PREROUTING ACCEPT [1:64]
:INPUT ACCEPT [1:64]
-A INPUT -p udp -m multiport --dport 1194 -j ACCEPT
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1:64]
#ProFTPD
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2106 -j DNAT --to-destination 192.168.154.6:2106
#SSH
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2202 -j DNAT --to-destination 192.168.154.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2203 -j DNAT --to-destination 192.168.154.3:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2204 -j DNAT --to-destination 192.168.154.4:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2205 -j DNAT --to-destination 192.168.154.5:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2206 -j DNAT --to-destination 192.168.154.6:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2207 -j DNAT --to-destination 192.168.154.7:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2208 -j DNAT --to-destination 192.168.154.8:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2209 -j DNAT --to-destination 192.168.154.9:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2210 -j DNAT --to-destination 192.168.154.10:22
#WEB:MailStrange
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8085 -j DNAT --to-destination 192.168.154.5:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8485 -j DNAT --to-destination 192.168.154.5:443
#WEB:Preprod
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8086 -j DNAT --to-destination 192.168.154.6:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8486 -j DNAT --to-destination 192.168.154.6:443
#WEB:GIT
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8090 -j DNAT --to-destination 192.168.154.10:3000
#WEB:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8082 -j DNAT --to-destination 192.168.154.2:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8084 -j DNAT --to-destination 192.168.154.4:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8089 -j DNAT --to-destination 192.168.154.9:80
#WEB:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8482 -j DNAT --to-destination 192.168.154.2:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8484 -j DNAT --to-destination 192.168.154.4:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8489 -j DNAT --to-destination 192.168.154.9:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8483 -j DNAT --to-destination 192.168.154.3:3004

-A PREROUTING -i eth0 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 192.168.154.10:5000
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5222 -j DNAT --to-destination 192.168.154.10:5222
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5269 -j DNAT --to-destination 192.168.154.10:5269

-A PREROUTING -i eth0 -p tcp -m tcp --dport 2116:2196 -j DNAT --to-destination 192.168.154.6:2116-2196
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Jun 28 15:01:31 2016
# Generated by iptables-save v1.4.21 on Tue Jun 28 15:01:31 2016
*filter
:INPUT ACCEPT [1664:212350]
#VPN
-A INPUT -p udp -m multiport --dport 1194 -j ACCEPT
:FORWARD ACCEPT [932:78321]
:OUTPUT ACCEPT [1418:211983]
COMMIT
# Completed on Tue Jun 28 15:01:31 2016
